--- a/qemu-6.0.0/hw/riscv/Kconfig
+++ b/qemu-6.0.0/hw/riscv/Kconfig
@@ -35,6 +35,10 @@ config RISCV_VIRT
     select VIRTIO_MMIO
     select FW_CFG_DMA
 
+config QUARD_STAR
+    bool
+    select SERIAL
+
 config SIFIVE_E
     bool
     select MSI_NONBROKEN
