QuardStar Tutorial 2021 Chapter 7 (ch7)

--- a/dts/quard_star_sbi.dts
+++ b/dts/quard_star_sbi.dts
@@ -8,6 +8,52 @@
 
 	chosen {
 		stdout-path = "/soc/uart0@10000000";
+
+		opensbi-domains {
+		    compatible = "opensbi,domain,config";
+
+            tmem: tmem {
+                compatible = "opensbi,domain,memregion";
+                base = <0x0 0xb0000000>;
+                order = <28>;
+            };
+
+            tuart: tuart {
+                compatible = "opensbi,domain,memregion";
+                base = <0x0 0x10002000>;
+                order = <8>;
+                mmio;
+                devices = <&uart2>;
+            };
+
+		    allmem: allmem {
+		        compatible = "opensbi,domain,memregion";
+		        base = <0x0 0x0>;
+		        order = <64>;
+		    };
+
+            tdomain: trusted-domain {
+                compatible = "opensbi,domain,instance";
+                possible-harts = <&cpu7>;
+                regions = <&tmem 0x7>, <&tuart 0x7>, <&allmem 0x7>;
+                boot-hart = <&cpu7>;
+                next-arg1 = <0x0 0x00000000>;
+		        next-addr = <0x0 0xb0000000>;
+		        next-mode = <0x0>;
+                system-reset-allowed;
+            };
+
+		    udomain: untrusted-domain {
+		        compatible = "opensbi,domain,instance";
+		        possible-harts = <&cpu0 &cpu1 &cpu2 &cpu3 &cpu4 &cpu5 &cpu6>;
+		        regions = <&tmem 0x0>, <&tuart 0x0>, <&allmem 0x7>;
+				boot-hart = <&cpu0>;
+		        next-arg1 = <0x0 0x82200000>;
+		        next-addr = <0x0 0x82000000>;
+		        next-mode = <0x1>;
+		        system-reset-allowed;
+		    };
+		};
 	};
 
 	memory@80000000 {
@@ -26,6 +72,7 @@
 			reg = <0x0>;
 			status = "okay";
 			compatible = "riscv";
+			opensbi-domain = <&udomain>;
 			riscv,isa = "rv64imafdcsu";
 			mmu-type = "riscv,sv48";
 
@@ -43,6 +90,7 @@
 			reg = <0x1>;
 			status = "okay";
 			compatible = "riscv";
+			opensbi-domain = <&udomain>;
 			riscv,isa = "rv64imafdcsu";
 			mmu-type = "riscv,sv48";
 
@@ -60,6 +108,7 @@
 			reg = <0x2>;
 			status = "okay";
 			compatible = "riscv";
+			opensbi-domain = <&udomain>;
 			riscv,isa = "rv64imafdcsu";
 			mmu-type = "riscv,sv48";
 
@@ -77,6 +126,7 @@
 			reg = <0x3>;
 			status = "okay";
 			compatible = "riscv";
+			opensbi-domain = <&udomain>;
 			riscv,isa = "rv64imafdcsu";
 			mmu-type = "riscv,sv48";
 
@@ -94,6 +144,7 @@
 			reg = <0x4>;
 			status = "okay";
 			compatible = "riscv";
+			opensbi-domain = <&udomain>;
 			riscv,isa = "rv64imafdcsu";
 			mmu-type = "riscv,sv48";
 
@@ -111,6 +162,7 @@
 			reg = <0x5>;
 			status = "okay";
 			compatible = "riscv";
+			opensbi-domain = <&udomain>;
 			riscv,isa = "rv64imafdcsu";
 			mmu-type = "riscv,sv48";
 
@@ -128,6 +180,7 @@
 			reg = <0x6>;
 			status = "okay";
 			compatible = "riscv";
+			opensbi-domain = <&udomain>;
 			riscv,isa = "rv64imafdcsu";
 			mmu-type = "riscv,sv48";
 
@@ -145,6 +198,7 @@
 			reg = <0x7>;
 			status = "okay";
 			compatible = "riscv";
+			opensbi-domain = <&tdomain>;
 			riscv,isa = "rv64imafdcsu";
 			mmu-type = "riscv,sv48";
 
