QuardStar Tutorial 2021 Chapter 9 (ch9)

--- a/dts/quard_star_sbi.dts
+++ b/dts/quard_star_sbi.dts
@@ -14,8 +14,8 @@
 
             tmem: tmem {
                 compatible = "opensbi,domain,memregion";
-                base = <0x0 0xb0000000>;
-                order = <28>;
+                base = <0x0 0xBF800000>;
+                order = <23>;
             };
 
             tuart: tuart {
@@ -38,7 +38,7 @@
                 regions = <&tmem 0x7>, <&tuart 0x7>, <&allmem 0x7>;
                 boot-hart = <&cpu7>;
                 next-arg1 = <0x0 0x00000000>;
-		        next-addr = <0x0 0xb0000000>;
+		        next-addr = <0x0 0xBF800000>;
 		        next-mode = <0x0>;
                 system-reset-allowed;
             };
@@ -48,8 +48,8 @@
 		        possible-harts = <&cpu0 &cpu1 &cpu2 &cpu3 &cpu4 &cpu5 &cpu6>;
 		        regions = <&tmem 0x0>, <&tuart 0x0>, <&allmem 0x7>;
 				boot-hart = <&cpu0>;
-		        next-arg1 = <0x0 0x82000000>;
-		        next-addr = <0x0 0x80200000>;
+		        next-arg1 = <0x0 0xB0000000>;
+		        next-addr = <0x0 0xB0200000>;
 		        next-mode = <0x1>;
 		        system-reset-allowed;
 		    };
