QuardStar Tutorial 2021 Chapter 14 (ch14)

--- a/busybox-1.33.1/configs/quard_star_defconfig
+++ b/busybox-1.33.1/configs/quard_star_defconfig
@@ -1,7 +1,5 @@
 #
-# Automatically generated make config: don't edit
 # Busybox version: 1.33.1
-# Sun Jul 11 11:45:02 2021
 #
 CONFIG_HAVE_DOT_CONFIG=y
 
@@ -40,7 +38,7 @@ CONFIG_FEATURE_SYSLOG=y
 #
 # Build Options
 #
-CONFIG_STATIC=y
+# CONFIG_STATIC is not set
 # CONFIG_PIE is not set
 # CONFIG_NOMMU is not set
 # CONFIG_BUILD_LIBBUSYBOX is not set
