QuardStar Tutorial 2021 Chapter 18 (ch18)

--- a/dts/quard_star_sbi.dts
+++ b/dts/quard_star_sbi.dts
@@ -65,7 +65,7 @@
 		        next-addr = <0x0 0xBF800000>;
 		        next-mode = <0x0>;
                 system-reset-allowed;
-            };
+			};
 
 		    udomain: untrusted-domain {
 		        compatible = "opensbi,domain,instance";
@@ -301,6 +301,33 @@
 			clock-frequency = <0x384000>;
 			reg = <0x0 0x10002000 0x0 0x100>;
 			compatible = "ns16550a";
+		};
+
+		rtc@10003000 {
+			interrupts = <0xb>;
+			interrupt-parent = <0x11>;
+			reg = <0x0 0x10003000 0x0 0x1000>;
+			compatible = "google,goldfish-rtc";
+		};
+
+		reboot {
+			value = <0x7777>;
+			offset = <0x0>;
+			regmap = <0x12>;
+			compatible = "syscon-reboot";
+		};
+
+		poweroff {
+			value = <0x5555>;
+			offset = <0x0>;
+			regmap = <0x12>;
+			compatible = "syscon-poweroff";
+		};
+		
+		test@100000 {
+			phandle = <0x12>;
+			reg = <0x0 0x100000 0x0 0x1000>;
+			compatible = "sifive,test1", "sifive,test0", "syscon";
 		};
 
 		plic@c000000 {
