--- a/dts/quard_star_uboot.dts
+++ b/dts/quard_star_uboot.dts
@@ -224,6 +224,33 @@
 			compatible = "ns16550a";
 		};
 
+		rtc@10003000 {
+			interrupts = <0xb>;
+			interrupt-parent = <0x11>;
+			reg = <0x0 0x10003000 0x0 0x1000>;
+			compatible = "google,goldfish-rtc";
+		};
+
+		reboot {
+			value = <0x7777>;
+			offset = <0x0>;
+			regmap = <0x12>;
+			compatible = "syscon-reboot";
+		};
+
+		poweroff {
+			value = <0x5555>;
+			offset = <0x0>;
+			regmap = <0x12>;
+			compatible = "syscon-poweroff";
+		};
+		
+		test@100000 {
+			phandle = <0x12>;
+			reg = <0x0 0x100000 0x0 0x1000>;
+			compatible = "sifive,test1", "sifive,test0", "syscon";
+		};
+		
 		virtio_mmio@10107000 {
 			interrupts = <0x8>;
 			interrupt-parent = <0x11>;
