QuardStar Tutorial 2021 Chapter 22 (ch22)

--- a/dts/quard_star_uboot.dts
+++ b/dts/quard_star_uboot.dts
@@ -7,7 +7,7 @@
 	model = "riscv-quard-star,qemu";
 
 	chosen {
-		bootargs = "root=/dev/vda2 rw console=ttyS0 video=1280x720";
+		bootargs = "root=/dev/vda2 rw console=ttyS0";
 		stdout-path = "/soc/uart0@10000000";
 	};
 
