--- a/target_root_app/sudo-SUDO_1_9_7p1/.gitignore
+++ b/target_root_app/sudo-SUDO_1_9_7p1/.gitignore
@@ -72,6 +72,7 @@ plugins/sudoers/tsdump
 plugins/sudoers/visudo
 plugins/sudoers/prologue
 plugins/sudoers/check_[a-z]*
+!plugins/sudoers/check_aliases.c
 plugins/sudoers/fuzz_[a-z]*
 plugins/sudoers/regress/**/*.out
 plugins/sudoers/regress/**/*.toke
